# ICEDA

./: .gitignore  HLS_zj.rar  README.md  latex.rar  top.v
HLS/: CMakeLists.txt  Readme.md
HLS/result/: binding_result.txt  dotprod.v  tb_top.v  top.v
HLS/src/: Basic.hpp  main.cpp
HLS/src/Genrtl/: genrtl.h
HLS/src/Main/: HLSHandler.cpp  HLSHandler.h  RTLGener.cpp  RTLGener.h
HLS/src/Parser/: parser.cpp  parser.h
HLS/src/Utils/: Log.cpp  Log.h  TimeRecorder.cpp  TimeRecorder.h  utils.cpp  utils.h
HLS/test/: test_result.txt
Synthesis/phyLS/: .history  CMakeLists.txt  results.txt  run.py
Synthesis/phyLS/script/: adder.script  arbiter.script  cavlc.script
Synthesis/phyLS/src/core/: balance.hpp  rewrite.hpp
latex/: SHUreport.sty  main.aux  main.out  main.tex  main.toc
